# fastapi_movies

./: .dockerignore  .gitignore  Dockerfile  README.md  database.py  main.py  pyproject.toml  repository.py  router.py
migrations/: env.py
migrations/versions/: ffffe4416ce5_initial.py
src/: database.py  main.py  repository.py
src/operations/: router.py  schemas.py
